added background img

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     </head>
 
     <body onload="init();">
-        <canvas id="main" width="500" height ="500"></canvas>
+        <div class='canvasDiv'>
+        <canvas id="main" width="1024" height ="512"></canvas>
+        </div>
     </body>
 </html>
